[gd_scene load_steps=2 format=3 uid="uid://h0cr4d3s1vzyn"]

[ext_resource type="Script" path="res://scripts/settings_screen.gd" id="1"]

[node name="SettingsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.2, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "‚öôÔ∏è Settings"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ConfigSection" type="VBoxContainer" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/ConfigSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "API Configuration"

[node name="ApiKeyLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/ConfigSection"]
layout_mode = 2
text = "API Key:"

[node name="ApiKeyInput" type="LineEdit" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/ConfigSection"]
layout_mode = 2
placeholder_text = "gb_live_your_api_key_here"

[node name="BaseUrlLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/ConfigSection"]
layout_mode = 2
text = "Base URL:"

[node name="BaseUrlInput" type="LineEdit" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/ConfigSection"]
layout_mode = 2
text = "https://api.godotbaas.com"

[node name="SaveConfigButton" type="Button" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/ConfigSection"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "üíæ Save Configuration"

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="InfoSection" type="VBoxContainer" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/InfoSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Information"

[node name="PlayerIdLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/InfoSection"]
layout_mode = 2
text = "Player ID: Not logged in"

[node name="UsernameLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/InfoSection"]
layout_mode = 2
text = "Username: N/A"

[node name="AccountTypeLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/InfoSection"]
layout_mode = 2
text = "Account Type: N/A"

[node name="HSeparator3" type="HSeparator" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LinksSection" type="VBoxContainer" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/LinksSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Resources"

[node name="DocsButton" type="Button" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/LinksSection"]
layout_mode = 2
text = "üìö Documentation"

[node name="DashboardButton" type="Button" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/LinksSection"]
layout_mode = 2
text = "üåê Dashboard"

[node name="GitHubButton" type="Button" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/LinksSection"]
layout_mode = 2
text = "üíª GitHub Repository"

[node name="StatusLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = " "
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 120.0
offset_bottom = 60.0
text = "‚Üê Back"

[connection signal="pressed" from="BackButton" to="." method="_on_back_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/MarginContainer/VBoxContainer/ConfigSection/SaveConfigButton" to="." method="_on_save_config_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/MarginContainer/VBoxContainer/LinksSection/DocsButton" to="." method="_on_docs_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/MarginContainer/VBoxContainer/LinksSection/DashboardButton" to="." method="_on_dashboard_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/MarginContainer/VBoxContainer/LinksSection/GitHubButton" to="." method="_on_github_pressed"]
